@@ -41,3 +41,7 @@
 @interface Atlas6 : AtlasDemo
 {}
 @end
+
+@interface Atlas7 : AtlasDemo
+{}
+@end
